Fixed layout bugs where preview images were forced to be square on model pages
Former-commit-id: 6cc7b6443b3a0184115d2b435bd9f4b0f6189c17

--- a/public/stylesheets/sass/nlcommons.scss
+++ b/public/stylesheets/sass/nlcommons.scss
@@ -421,7 +421,6 @@ $comment-border-width: 2px;
 }
 #preview_image {
   &>div, img {
-    width: 152px;
     height: 152px;
     line-height: 152px;
     vertical-align: middle;
